--- a/projman/templates/pvc.yaml
+++ b/projman/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.persistence.name }}
+  name: {{ .Release.Name }}-pvc
   labels:
     app.kubernetes.io/name: {{ include "projman.name" . }}
     helm.sh/chart: {{ include "projman.chart" . }}
