--- a/projman/values.yaml
+++ b/projman/values.yaml
@@ -2,6 +2,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 persistence:
+  name: "initial"
   annotations: {}
   storageClass: "nfs"
   accessMode: "ReadWriteMany"
