Secrets and empty default values

--- a/projman/templates/secrets.yaml
+++ b/projman/templates/secrets.yaml
@@ -1,20 +1,20 @@
-{{- if .Values.configs }}
+{{- if .Values.secrets }}
 apiVersion: v1
 metadata:
-  name: {{.Values.projectName}}-projman-configs
+  name: {{.Values.projectName}}-projman-secrets
   labels:
     app.kubernetes.io/name: {{ include "projman.name" . }}
     helm.sh/chart: {{ include "projman.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-kind: ConfigMap
-data:
-  {{- range $key, $entry := .Values.configs -}}
-  {{- if $entry -}}
-  {{- $key | nindent 4 }}: |
-    {{- $entry | nindent 8 }}
+kind: Secret
+type: Opaque
+stringData:
+  {{- range $seckey, $secentry := .Values.secrets -}}
+  {{- if $secentry -}}
+  {{- $seckey | nindent 4 }}: >-
+    {{ $secentry | indent 8 -}}
   {{- end -}}
   {{- end }}
 ---
 {{- end -}}
-
