--- a/projman/templates/jobs.yaml
+++ b/projman/templates/jobs.yaml
@@ -13,8 +13,10 @@ spec:
   template:
     spec:
       restartPolicy: Never
+      volumes:
+        {{- $entry.volumes | toYaml | nindent 8 }}
       containers:
-        {{- $entry | toYaml | nindent 8}}
+        {{- $entry.containers | toYaml | nindent 8 }}
       
 ---
 {{- end }}
